--- a/wiki/Scorched_Moon_Server_manual.wiki
+++ b/wiki/Scorched_Moon_Server_manual.wiki
@@ -2,7 +2,7 @@
 #labels Phase-Implementation
 
 = Dependencies =
-Scorched Moon requires python, we are planning to specifically work with python 3 however it will currently work with python 2 without problems.
+Scorched Moon requires python 3, it is not backwards compatible with python 2.
 
 = Launching Scorched Moon server = 
 Scorched Moon server is designed to run as a standalone application independent of any clients. Simply running scorched_moon_server.py will start the server directly. Once started the server is non-interactive and can only be controlled by logging in remotely.
@@ -24,7 +24,7 @@ These are the currently implemented server commands Scorched Moon accepts. All c
 === Currently implemented commands ===
   * exit - Disconnects user from server
   * shutdown - Cleanly shuts down server
-  * broadcast %s - Sends a broadcast message to all clients, players do not need to be logged in to receive a broadcast
+  * broadcast %s - Sends a broadcast message to all clients
   * version - sends user current server version
 
 === Currently planned commands ===
@@ -36,7 +36,7 @@ These are the currently implemented server commands Scorched Moon accepts. All c
 These are the currently implemented responses the server can send to a client.
 
 === Currently implemented responses ===
-  * broadcast %s - a chat message being sent to all clients
+  * broadcast %s - a chat message being sent to all clients even if not logged in
   * unknown %s - server received a command it didn't recognize
   * version %s - current server version number
   * disconnecting - server is disconnecting client
