--- a/wiki/Scorched_Moon_Server_manual.wiki
+++ b/wiki/Scorched_Moon_Server_manual.wiki
@@ -47,6 +47,7 @@ These are the currently implemented server commands Scorched Moon accepts. All c
   * shutdown - Cleanly shuts down server
   * broadcast %s - Sends a broadcast message to all clients
   * version - Sends user current server version
+  * whoall - request list of all connected users and clients
   * login %s - Logs player in with specified username, multiple players can log in from the same client connection to allow for hotseat play
   * logout %s - Logs player out, this does not disconnect client from the server
   * chat %s1 %s2 %s3 - Chat message to %s1 from username %s2 with message %s3, %s1 can be either "room" which is a general chat to everyone in the current chatroom or "team" which is a message to everyone that is on the same team (not fully implemented), or a specific username of another player which is a private message or whisper
@@ -62,6 +63,7 @@ These are the currently implemented responses the server can send to a client.
   * broadcast %s - a chat message being sent to all clients even if not logged in
   * unknown %s - server received a command it didn't recognize
   * version %s - current server version number
+  * whoall %i %s1 %s2 - list of all connected users %i is their ID, %s1 is username, %s2 is IP address
   * goodbye - server is disconnecting client
   * hello - server confiming new connection to client
   * error %s = generic error message specified in string
