Edited wiki page OMBCfacts through web user interface.

--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -67,4 +67,4 @@ As can be seen, the mines are just under the minimum range while anti-airs seem 
 The power bar has 18 increments for power levels. It takes just under 3 seconds for it to make one complete pass (both up and down), sadly we are unable to be more accurate in our timing. Based off our best estimates though, this means it will take about 1.5 seconds for the bar to make one incomplete pass (one way). Divide this by 18 and you get 0.083+ seconds for each increment. OMBC most likely works by running the power bar at about .08 seconds per increment. This comes to 2.88 seconds for one complete pass which would explain why it is just under 3 seconds instead of being 3 seconds exactly.
 
 = Networking =
-OMBC uses port 47624 for IP games. It uses a port somewhere between 2100 & 2800 for LAN games. Because we don't care about backwards compatibility with OMBC we have configured MoonPy to use port 6112 instead. This port is used by many other RTS games (most notably starcraft) and will make it easier for users to configure firewall settings when playing MoonPy over a network or the internet.
+OMBC uses port 47624 for IP games. It uses a port somewhere between 2100 & 2800 for LAN games. Because we don't care about backwards compatibility with OMBC we are using port 6112 instead. This port is used by many other RTS games (most notably starcraft) and will make it easier for users to configure firewall settings when playing MoonPy over a network or the internet.
