--- a/wiki/Scorched_Moon_design.wiki
+++ b/wiki/Scorched_Moon_design.wiki
@@ -13,3 +13,6 @@ Scorched Moon is going to be an online server only with no current plans to deve
 == Server Design ==
 
 Server will handle all game logic in Scorched Moon, this includes map data. The user will submit commands directly to the server. The server will process this data then send complete map data back to the user as either raw data or with tcurses. This includes FoW and SoW. By setting up the server this will it will not only allow people to play without a client but it will limit player cheating as only information that the player is supposed to know instead of all map data. 
+
+== Map Ideas ==
+To better fit OMBC the map will be a grid format. Each building will take a 2x2 section of the grid which each tether will take one. Each hub will be able to launch up to 12 tethers as shown in [http://code.google.com/p/tether/wiki/OMBCfacts OMBC facts]. I am thinking to simplify matters I will have the system calculate the shot when a command to fire is given and if the first tether spot is taken up with a tether from a previous shot then it will be denied. 
