Edited wiki page tcurses_manual through web user interface.

--- a/wiki/tcurses_manual.wiki
+++ b/wiki/tcurses_manual.wiki
@@ -8,5 +8,11 @@ Tcurses is a python3 library file designed to allow a 'curses' style interface o
 
 = Usage =
 
+== tcurses.clr(client) ===
+Clears the entire screen and moves cursor to upper right hand position
+
+== tcurses.pos(client, x, y) ===
+Moves cursor to column x in row y
+
 == tcurses.splashscreen(client, image) ==
 clears entire screen and then displays text file image to client. Image file is output without any formatting on a line by line basis. This is intentional and can result in line wrap and screen scrolling if image is unable to fit on client screen.
