--- a/wiki/Scorched_Moon_manual.wiki
+++ b/wiki/Scorched_Moon_manual.wiki
@@ -1,8 +1,5 @@
 #summary Scorched Moon Server Manual
-#labels Phase-Implementation,Deprecated
-
-= Do not use this manual!! =
-This particular manual has been deprecated due to design changes to Scorched Moon. It is being left on the wiki for reference purposes for the time being but will be rewritten once things have stabilized. 
+#labels Phase-Implementation
 
 = Dependencies =
 Scorched Moon requires python 3, it is not backwards compatible with python 2.
