--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -13,46 +13,25 @@ Moonbase Commander has quite often been called "the best game no one has ever he
 You could do a web search to find a copy of the trial version online.
 
 ====Moonbase Commander absolutely rocks! Why recreate something thats so perfect?====
-While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not received any support from any of the different companies that own it for over 10 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
-
-====What is MoonPy?====
-MoonPy is our first open source remake of Moonbase Commander developed by us here at project tether. 
-
-====MoonPy is a stupid name, why did you pick it?====
-Back in the early days of this project we couldn't decide on a name for the game itself. At the time we decided we wouldn't worry about it and would come up with one later. We titled the python script to launch our game "moon", short for moonbase commander. Because it's written in python it's listed as moon.py in the filesystem. We started calling it "moon dot pie" just to call it something, and eventually it got abbreviated to it's current name MoonPy (pronounced like "moon pie"). 
-
-====How far along is MoonPy?=====
-MoonPy is playable but extremely glitchy. All the units except for balloons are implemented, and since there is no FoW, balloons are currently unnecessary. Currently all development on MoonPy has been halted in favor of Scorched Moon.
-
-====Where did the MoonPy downloads go?====
-Since all work has stopped on MoonPy we have deprecated it so the OS specific downloads are no longer available. The source tar.gz package is available on the download page though you'll have to search for deprecated files. It is also available as a branch on SVN. You can also sometimes find it on some 3rd party sites like playdeb. 
-
-====I have no clue what you just said, is there an easier way to download MoonPy?====
-We don't support MoonPy anymore so basically no.
+While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not received any support or updates from any of the different companies that own it for over 10 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
 
 ====What is Scorched Moon?====
-Scorched Moon is essentially our sequel to MoonPy. MoonPy has some serious design flaws in it that results in delays and glitches, most of this relates to the GUI library used, however since these problems are related to the original design and would require so much work to change it was decided it would simply be easier to redesign and rewrite MoonPy from the ground up. With such a major change planned we decided we'd actually give it a proper name since MoonPy isn't what any of us wanted for a name but is what we got stuck with.
+Scorched Moon is our current program we are developing at project tether. It is being designed in two parts, a server and a client. The server is being designed to run as a persistent service on a server that users will be able to connect to using a client and find other players to play with. Kind of like how battle.net works. The client will of course be a graphical system to allow players to connect to the server. To limit cheating all game calculations will take effect on the server and the client merely displays the information. 
 
 ====I can't find a download for Scorched Moon, where is it?====
 Scorched Moon is still in early development and has no release packages yet. The code for it is available on SVN if you want to help with testing or just take a look.
 
-====I downloaded Scorched Moon from SVN but can't figure out how to play it====
-Scorched Moon is not playable yet. Also even when it is done it is going to be a standalone server with no graphical interface. Players will be able to connect in and play with a standard telnet client using [http://code.google.com/p/tcurses tcurses]. We will have non-tcurses output available so standard graphical clients can be developed in the future but there are no plans to make one now.
-
-====Why aren't you making a client?====
-Because our only active coder can't write a GUI program to save his life. If someone with more expertise is willing to help code a client for us we'd be thrilled.
+====I downloaded Scorched Moon from SVN but can't figure out how to play or run it====
+Scorched Moon is not playable yet as we are still early in development. Currently the only purpose in running either server or client is for testing purposes.
 
 ====Why is it sometimes months between updates?====
-Because we're all unpaid volunteers, so when we get busy with real life work on Scorched Moon gets put on the back burner. Also work on Scorched Moon is paused while the tcurses library is being worked on.
-
-====What is tcurses?====
-[http://code.google.com/p/tcurses Tcurses] is a library that provides curses style output for line only telnet server programs, the same kind of program Scorched Moon is. We decided to develop it as it's own separate project and then roll it back into Scorched Moon when done to help make it more easy to use with other programs.
+Because we're all unpaid volunteers, so when we get busy with real life work on Scorched Moon gets put on the back burner.
 
 ====Why are you using python, why not a real programming language like C++?====
 There are many reasons we're using python but the top 3 reasons are: it's simple to code, it's easily portable to different OS's, and it does what we need.
 
 ====What OS are you developing for?====
-Primary development is on Linux and since Scorched Moon is being designed to run as a long-term server application Linux compatibility is our highest priority. It should theoretically run on any OS that has python3 installed, and having at least Windows/osX compatibility is a long-term goal, however we are not doing any testing with OS's besides Linux at this time.
+We are planning on having Scorched Moon be compatible with Linux, osX, and Windows. The server should theoretically work on any computer with python3 installed while the client should theoretically work on any computer with python3 and pygame for python3 installed.
 
 ====Will any project tether game be compatible with Moonbase Commander?====
 No.
@@ -61,13 +40,19 @@ No.
 Mostly because Moonbase Commander is essentially dead, practically no one plays it anymore and the networking is pretty unstable to begin with. What we're trying to do is hard enough already and we don't want to go through the hassle of reverse engineering everything for no real benefit. We also made some changes that make MoonPy and Scorched Moon incompatible with the original even if we did manage to reverse engineer everything.
 
 ====What changes were made?====
-With MoonPy the biggest change we made is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we found inconvenient. Scorched Moon however is being built as a non-graphical standalone server allowing someone to host up to 1000 users at the same time with multiple games on the same server. It will be playable with just a standard telnet client though we are also we're leaving the communication format open to allow for more conventional clients.
+The biggest change is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we found inconvenient. In addition to the change in the player limit. We are also planning on a system to allow players to find each other easier.
 
 ====Changing Moonbase Commander is heresy! Why did you change things?====
 Most of the changes we have listed are things that we felt were flaws in Moonbase Commander. The 4 player limit for example was always a major problem for most of us. Same goes true for most of the other changes listed. We have tried to keep the actual gameplay itself as accurate to the original as we can make it.
 
 ====I think Scorched Moon should do X, why don't you do it?====
 We take suggestions but remember we're all unpaid volunteers doing this out love for Moonbase Commander. If you *really* want something implemented everything we have is open source so feel free to implement it yourself. 
+
+====Where did the MoonPy downloads go?====
+Since all work has stopped on MoonPy we have deprecated it so the OS specific downloads are no longer available. The source tar.gz package is available on the download page though you'll have to search for deprecated files to see them. It is also available as a branch on SVN. You can also sometimes find it on some 3rd party sites like playdeb. 
+
+====I have no clue what you just said, is there an easier way to download MoonPy?====
+We don't support MoonPy anymore so basically no.
 
 ====I found a bug, what do I do?====
 Great, identifying them is (usually) the hardest part. Remember though that we've stopped development on MoonPy so we will ignore bug reports for it. If you have found a problem with Scorched Moon it's still in very early development so chances are we're already aware of it even if it's not listed on the [http://code.google.com/p/tether/issues/list issue tracker]. 
@@ -76,4 +61,4 @@ Great, identifying them is (usually) the hardest part. Remember though that we'v
 We can always use some help to keep this going. Currently the biggest help we need is people to help us code it. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well. The more people interested, the more likely someone with skills we need will be able to help.
 
 ====I've been looking through the MoonPy source code archives and keep seeing mention of openRTS, is project tether a part of openRTS?====
-openRTS is a completely seperate project from project tether. We have however integrated code from various other open source projects to help speed up development of project tether. The MoonPy engine is a heavily modified version of the openRTS engine and as such elements of openRTS occasionally show up, especially in older versions of MoonPy. Currently very little of the original openRTS engine remains unchanged within MoonPy, we do however have the original unedited openRTS source files deprecated on our [http://code.google.com/p/tether/downloads/list downloads page] for reference and historical purposes. Scorched Moon shares no code at all with openRTS. 
+openRTS is a completely separate project from project tether. We have however integrated code from various other open source projects to help speed up development of project tether. The MoonPy engine is a heavily modified version of the openRTS engine and as such elements of openRTS occasionally show up, especially in older versions of MoonPy. Currently very little of the original openRTS engine remains unchanged within MoonPy, we do however have the original unedited openRTS source files deprecated on our [http://code.google.com/p/tether/downloads/list downloads page] for reference and historical purposes. Scorched Moon shares no code at all with openRTS. 
