--- a/wiki/milestones.wiki
+++ b/wiki/milestones.wiki
@@ -1,5 +1,5 @@
 #summary planned mileposts and versioning
-#labels Phase-Requirements
+#labels Phase-Requirements,Phase-Design
 
 = Introduction to Scorched Moon versions =
 
