Edited wiki page milestones through web user interface.

--- a/wiki/milestones.wiki
+++ b/wiki/milestones.wiki
@@ -1,5 +1,5 @@
 #summary planned mileposts and versioning
-#labels Phase-Requirements,Phase-Design
+#labels Phase-Requirements,Phase-Design,Featured
 
 = Introduction to Scorched Moon versions =
 
