Edited wiki page FAQs through web user interface.

--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -9,7 +9,7 @@ Project tether is an open source project focused on recreating the classic strat
 ====What is Moonbase Commander?====
 Moonbase Commander has quite often been called "the best game no one has ever heard of". It is the first and most well known ATS game. If you've never played an ATS, most people describe it as a unique combination of Starcraft and Scorched Earth but that doesn't say much. The best way to find out what Moonbase Commander is like is to play the game.
 
-====Well then where can I go to play the game?====
+====Well then where can I go to play Moonbase Commander?====
 Do a web search and you can find places online that still sell it for cheap. There used to be a trial but that is hard to find these days.
 
 ====Moonbase Commander absolutely rocks! Why recreate something thats so perfect?====
