--- a/wiki/Client_Manual.wiki
+++ b/wiki/Client_Manual.wiki
@@ -5,7 +5,7 @@
 Scorched Moon client requires python3 and pygame for python3, it is not backwards compatible with python 2.
 
 = Launching Scorched Moon server = 
-Simply running scorched_moon_client.py will start the client. Logs, save files and settings will be stored in ~/.scorched_moon on linux and C:\Users\<username>\scorched_moon on windows.
+Simply running scorched_moon_client.py will start the client. Logs, save files and settings will be stored in ~/.scorched_moon on linux and C:\Users\username\scorched_moon on windows.
 
 = Scorched Moon client arguments =
 Scorched Moon accepts the following arguments on launch
@@ -15,7 +15,6 @@ Scorched Moon accepts the following arguments on launch
   * --debug or -d - enables debug mode, debug mode overrides logging settings to level 1 regardless of other settings
   * --help or -h - Shows a list of arguments
   * --skip or -s - Skips intro screen
-
 
 = Scorched Moon client data files =
 Description and location of non-code data files used by Scorched Moon
