--- a/wiki/milestones.wiki
+++ b/wiki/milestones.wiki
@@ -32,7 +32,7 @@ Version 0.1 to version 0.2 will focus on the map system. When done the server wi
 
   * server is capable of creating individual games and allow players to join them
   * server is capable of creating simple random maps
-  * server is capable of creating custom premade maps
+  * server is capable of loading custom premade maps
   * server is capable of sending custom map data to client
   * client is capable of displaying map data
   * client is capable of dragging the map around so that the entire map can be seen
