--- a/wiki/milestones.wiki
+++ b/wiki/milestones.wiki
@@ -21,7 +21,7 @@ Up to version 0.1 we are working on the basic framework for both the server and 
   * ~~client is capable of launching with GUI interface~~
   * ~~client is capable of switching between screens~~
   * ~~client is capable of connecting to server~~
-  * client is capable of logging into server
+  * client is capable of logging into server with username
   * ~~client is capable of sending and receiving basic chat commands~~
   * client is capable of displaying chat information so players can chat with each other
 
@@ -34,6 +34,7 @@ Version 0.1 to version 0.2 will focus on the map system. When done the server wi
   * server is capable of creating simple random maps
   * server is capable of loading custom premade maps
   * server is capable of sending custom map data to client
+  * client is capable of loading, parsing, and saving settings file
   * client is capable of displaying map data
   * client is capable of dragging the map around so that the entire map can be seen
 
